--- a/main.css
+++ b/main.css
@@ -39,30 +39,37 @@ button {
     padding: 15px;
 }
 
+button:hover {
+    background-color: #f6980c;
+    box-shadow: 0 16px 36px rgba(246 152 12/20%);
+    transition: background-color 0.3s ease-in;
+  
+}
+
 .about__image {
     width: 500px;
-  }
+}
    
 .about__sun-image {
     width: 100px;
     height: 100px;
-  }
+}
 
 .about {
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      padding-top: 115px;
-      padding-bottom: 115px;
-      background: url('img/back.png') no-repeat;
-      background-position: center;
-      background-size: cover;
-  }
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 115px;
+    padding-bottom: 115px;
+    background: url('img/back.png') no-repeat;
+    background-position: center;
+    background-size: cover;
+}
 
 .about h1{
-      font-size: 70px;
-      line-height: 76px;
-  }
+    font-size: 70px;
+    line-height: 76px;
+}
 
 .about p {
     font-size: 18px;
@@ -79,12 +86,12 @@ button {
 
 .about__info {
     max-width: 550px;
-  }
+}
 
-  .form__container {
+.form__container {
     width: 550px;
-  }
-  .form {
+}
+.form {
     background-color: #1D263A;
     color: #fff;
     padding-top: 115px; 
@@ -93,19 +100,90 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-  }
+}
 
-  .form h1 {
+.form h1 {
     font-size: 48px;
-  }
+}
 
-  .form p {
+.form p {
     font-size: 18px;
     opacity: 0.65;
-  }
+}
 
-  .form__group {
+.form__group {
     display: flex;
     flex-direction: column;
     text-align: left;
-  }
+}
+
+.form form {
+    display: grid;
+    grid-gap: 20px;
+    margin-top: 60px;
+}
+
+.form label {
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+.form input, .form select {
+    font-size: 18px;
+    color: #213053;
+    height: 60px;
+    padding: 0 20px;
+    border-radius: 15px;
+    border: none;
+    margin-bottom: 10px;
+}
+
+.form__submit {
+    font-size: 18px;
+    font-weight: 600;
+    margin-top: 40px;
+}
+
+input {
+    outline: none;
+}
+
+select {
+    appearance: none;
+}
+
+footer {
+    padding: 90px 20px;
+    font-weight: 600;
+    font-size: 16px;
+}
+
+.footer__container {
+    display: flex;
+    justify-content: center;
+}
+
+.footer__copyright {
+    margin-top: 40px;
+    text-align: center;
+    opacity: 0.5;
+}
+
+.footer__group {
+    margin-right: 80px;
+}
+
+.footer__group h3 {
+    font-size: 16px;
+    opacity: 0.7;
+    margin-bottom: 30px;
+}
+
+.footer__links {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer__links a {
+    margin-bottom: 15px;
+}
