--- a/main.css
+++ b/main.css
@@ -96,6 +96,144 @@ button:hover {
     max-width: 550px;
 }
 
+.features {
+  background-color: #fff;
+  padding: 115px 60px;
+
+}
+.cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 50px;
+}
+.card {
+  padding: 35px 40px 25px 40px;
+  border: 1px #d9e4e6 solid;
+  border-radius: 5px;
+  background: #fff;
+}
+.card p {
+  font-size: 16px;
+  line-height: 22px;
+  opacity: 0.8;
+}
+.card__logo {
+  height: 100px;
+  width: 100px;
+  font-size: 32px;
+  font-weight: 700;
+  background-color: #eaeff9;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.fa-solid.fa-solar-panel {
+  color: #ffb406;
+}
+.fa-solid.fa-chart-line {
+  color: #22a030;
+}
+
+#card__logo2 {
+  color: #ad1714;
+}
+.features__border {
+  margin: 50px 0px;
+  border: 1px #e6eaf4 solid;
+}
+.features__feedback {
+  display: flex;
+}
+.features__feedback-left {
+  margin-right: 10px;
+}
+.features__feedback-left h2 {
+  font-size: 48px;
+}
+.features__feedback-left p {
+  font-size: 18px;
+  line-height: 26px;
+  opacity: 0.7;
+}
+.features__feedback-right {
+  display: flex;
+  align-items: center;
+}
+.features__box {
+  padding: 30px 40px 25px 40px;
+  color: #fff;
+  border-radius: 25px;
+}
+.features__box h3 {
+  margin-top: 0;
+  margin-bottom: 20px;
+  font-size: 48px;
+}
+.features__savings-box {
+  background-color: #dc5e26;
+  box-shadow: 0px 6px 0 rgb(221 95 38 / 20%);
+  margin-right: 30px;
+}
+.features__rate-box {
+  background-color: #1d263a;
+  box-shadow: 0px 6px 0 rgb(29 38 58 / 20%);
+}
+.fa-solid.fa-star {
+  color: #ff7039;
+}
+.promo {
+  display: flex;
+  justify-content: space-around;
+}
+.promo__image {
+  background-image: url(img/promo.jpeg);
+  width: 50%;
+  background-size: cover;
+  background-position: center;
+  flex-shrink: 0;
+}
+.promo__right {
+  background-color: #dd5f26;
+  padding: 160px 60px;
+}
+.promo__text {
+  background-color: #fff;
+  padding: 30px 40px;
+  border-radius: 25px;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 26px;
+}
+
+.promo__text p::before {
+  content: '';
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #ec6b29;
+  margin-right: 10px;
+}
+.promo__text p {
+  opacity: 0.8;
+}
+.promo__text button {
+  background-color: #107b1c;
+  margin-top: 20px;
+  font-weight: 600;
+  font-size: 18px;
+  box-shadow: 0 16px 36px rgb(16 122 28 / 30%);
+  padding: 15px 30px;
+}
+.promo__button-wrap {
+  display: flex;
+  justify-content: center;
+}
+.promo__text button i {
+  font-size: 15px;
+  margin-left: 5px;
+}
 .form__container {
     width: 550px;
 }
@@ -253,6 +391,56 @@ footer {
   .about__sun-image {
     width: 75px;
     height: 75px;
+  }
+  .features {
+    background-color: #fff;
+    padding: 50px 10px;
+  }
+  .cards {
+    grid-template-columns: auto;
+  }
+  .features__feedback {
+    flex-direction: column;
+  }
+  .features__feedback-left {
+    margin-right: 0;
+  }
+  .features__feedback-left h2, .features__box h3 {
+    font-size: 36px;
+  }
+  .features__feedback-right {
+    flex-direction: column;
+    align-items: initial;
+  }
+  .features__savings-box {
+    margin-right: 0;
+    margin-bottom: 30px;
+  }
+  .promo {
+    flex-direction: column-reverse;
+  }
+  .promo__right {
+    padding: 50px 10px;
+  }
+  .promo__image {
+    width: 100%;
+    height: 500px;
+  }
+  .features__feedback-left {
+    margin-right: 0px;
+  }
+  .features__feedback-left h2 {
+    font-size: 36px;
+  }
+  .features__feedback-right {
+    flex-direction: column;
+  }
+  .features__feedback-right h3 {
+    font-size: 36px;
+  }
+  .features__savings-box {
+    margin-right: 0;
+    margin-bottom: 30px;
   }
 
   .form {
